core/sass/pages/invest/_landing-page.scss
// Invest landing page
// ====================

@import '../../partials/vars';
@import '../../partials/mixins';

.invest-landing-page {

  .landing-page-how-we-help {

    ul {
      width: 100%;
    }

    .icon {
      padding-bottom: $spacing-4;
      margin-bottom: $spacing-4;
      @include red-underline;
      height: calc(60px + #{$spacing-4} + 2px); // 60px x 60px icons, need to account for red underline and padding
    }

    .contact-button {
      @extend .icon;
      border-bottom: 0;
    }
  }

  :lang(ar) {
    .banner-container[dir=rtl] {
      .information-banner .banner-content > * {
        padding-left: 0;
        padding-right: 15px;
      }
    }
  }

  @media (min-width: 641px) {
    .landing-page-section .container {
      .left-half-page-text {
        padding-right: 60px;
      }

      .right-half-page-text {
        padding-left: 60px;
      }
    }
  }

  @media (max-width: 768px) {
    .landing-page-setup-guide,
    .landing-page-benefits {
      .card-grid {
        flex-direction: column-reverse;
      }
    }
  }

  @media (max-width: 640px) {
    .landing-page-how-we-help .help-section {
      min-height: auto;
      clear: both;
      padding-bottom: $spacing-4;

      &:last-child {
        padding-top: $spacing-3;

        p {
          margin-left: 0;
          width: 100%;
        }

        .contact-button {
          padding-bottom: 0;
          margin-bottom: 0;
        }
      }

      p,
      .icon {
        float: left;
      }

      p {
        width: calc(100% - 64px - 30px);
        margin-left: $spacing-3;
      }
    }
  }

  .invest-breadcrumbs {
    padding-bottom: 0;
  }

  @mixin landingPageSection {
    padding: $spacing-1 0;
  }

  .landing-page-section:nth-child(odd) {
    @include landingPageSection;
  }

  .landing-page-section:nth-child(even) {
    @include landingPageSection;
    background: $stone-40;
  }

  .center-vertical {
    margin-top: auto;
    margin-bottom: auto;
  }

  .flex-shrink-0 {
    flex-shrink: 0;
  }

  .landing-page-image{
    position: relative;
  }

  .case-study{
    .container{
      .grid-row{
        .button-arrow-small{
          margin-top: 45px;
        }
      }
    }
  }

  .landing-page-section .container .card-grid .column-half-l .eu-exit-button{
    white-space: normal;
  }

}

